[main]增加Java基础知识文档